# gigapoll

./: .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yaml  example.env  setup.cfg  tox.ini
gigapoll/: alembic.ini  bot.py  button.py  dto.py  enums.py  exc.py  filters.py  kb.py  main.py  states.py  utils.py
gigapoll/data/: db_session.py  models.py
gigapoll/migrations/: env.py
gigapoll/migrations/versions/: 18667acec75d_change_pk_for_polls.py  20e49f2626e7_add_uuid.py  2414952de7e3_choices_autoincrement_pk.py  260e4057c7c2_create_poll_table.py  5225756dc365_get_away_from_chat_id_and_message_id.py  62e6380ca552_update_tables.py  67bc6d3a1f7d_create_users_templates_tables.py  6862efa74624_user_templates_id_for_poll.py  7fc1f37605d7_extend_template_table.py  989e2709f6da_make_template_choices_wide.py  a0ee4a685123_add_template_name_to_polls_table.py  b364188ea9cf_init_all_tables.py  b805cd9906c1_add_choice_template_uuid.py  baf69a97f489_delete_polls_table.py  c5cabd428b1f_delete_message_thread_id.py  ce7c03e87450_delete_choices_table.py  d36e447d2185_delete_polls_config.py  e1a0283d0158_choices_autoincrement_pk.py  e204148ba076_add_templates_is_hidden.py  fb7ccad21eb5_create_a_choices_table.py  fc80f1f71330_add_fk_to_buttons_cbdata.py  ffdae944f122_create_table_template_choices.py
gigapoll/services/: buttons_service.py  choice_service.py  poll_service.py  template_service.py
gigapoll/template_creation/: strategies.py
