[metadata]
name = gigapoll
version = 0.1.0

[options]
packages = find:
install_requires =
    tokenize-rt>=5.2.0
python_requires = >=3.8.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    pyupgrade = pyupgrade._main:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
