[metadata]
name = gigapoll
version = 0.2.2
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    aiogram==3.3.0
    alembic==1.13.1
    black
    sqlalchemy==2.0.25
python_requires = >=3.11.0

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    gigapoll = gigapoll.main:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
